--- a/Samples/resourceLoader.html
+++ b/Samples/resourceLoader.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <script language="Javascript" src="../Framework/jsGFwk.js"></script>
-<script language="Javascript" src="../Framework/resourceManager.js"></script>
+<script language="Javascript" src="../Framework/jsGFwkRM.js"></script>
 <body>
 	<canvas id="canvas" width="640" height="480"></canvas>
 </body>
