Title for sample page changed

--- a/Samples/rotateSprite.html
+++ b/Samples/rotateSprite.html
@@ -7,7 +7,7 @@
 <script language="Javascript" src="../Framework/jsGFwkSprites.js"></script>
 <script language="Javascript" src="../Framework/jsGFwkEffects.js"></script>
 <body>
-	<h1>Click to rotate sprite</h1>
+	<h1>Use left or right arrow to rotate</h1>
 	<canvas id="canvas" width="640" height="480"></canvas>
 </body>
 <script language="Javascript">
