Improved rotation to don't need rotationPoint if missing

--- a/Samples/rotateSprite.html
+++ b/Samples/rotateSprite.html
@@ -65,7 +65,8 @@
 			x: 320,
 			y: 200,
 			//RotationPoint set the point where you want to make the rotation
-			rotationPoint: { x: 350, y: 210 },
+			//If you don't include this property, the point of rotation will be equal to the actual X and Y coords
+			//rotationPoint: { x: 350, y: 210 },
 			//****
 			
 			angle: 0,
