--- a/Samples/rotateSprite.html
+++ b/Samples/rotateSprite.html
@@ -12,7 +12,7 @@
 </body>
 <script language="Javascript">
 	jsGFwk.settings.canvas = "canvas";
-	jsGFwk.settings.clearColor = "rgb(255,255,255)";
+	jsGFwk.settings.clearColor = "rgb(0,255,255)";
 	
 	//Include external component libraries
 	jsGFwk.include("ResourceManager");
@@ -62,14 +62,14 @@
 			id: "fallingCharacter",
 			
 			//You need this fields to handle the rotation
-			x: 320,
+			x: 100,
 			y: 200,
-			//RotationPoint set the point where you want to make the rotation
-			//If you don't include this property, the point of rotation will be equal to the actual X and Y coords
-			//rotationPoint: { x: 350, y: 210 },
-			//****
+			//Set the rotation point in the center of the sprite
+			rotationPoint: { x: 33, y: 14 },
+						
+			angle: 40,
 			
-			angle: 0,
+			sinCounter: 0,
 			
 			init: function () {
 				jsGFwk.Sprites.createSprite({
@@ -90,14 +90,14 @@
 				if (jsGFwk.IO.keyboard._activeKey[37]) {
 					jsGFwk._gameObjects.fallingCharacter.angle-=2.5;
 				}
+				
+				jsGFwk._gameObjects.fallingCharacter.sinCounter += 0.1;
+				jsGFwk._gameObjects.fallingCharacter.x = 300 + Math.sin(jsGFwk._gameObjects.fallingCharacter.sinCounter) * 50;
+				jsGFwk._gameObjects.fallingCharacter.y = 240 + Math.sin(jsGFwk._gameObjects.fallingCharacter.sinCounter) * 10;
 			},
 			draw: function (context) {
-				//Rotate expect an angle and a pointer to delegate the drawing action.
-				this.rotate(this.angle, function (drawingSurface) {
-					drawingSurface.drawImage(jsGFwk.Sprites.sprites.fallingGuy.image, 
-						jsGFwk._gameObjects.fallingCharacter.x,
-						jsGFwk._gameObjects.fallingCharacter.y);
-				});
+				//Rotate and draw a sprite
+				this.rotateAndDraw({ angle: this.angle, sprite: jsGFwk.Sprites.sprites.fallingGuy });
 			}
 		});
 	}
