Added event dispatcher when a new object is created and added to the stack. Will notify all the plug ins using onObjectCreated. Also, changed the start event for plug in to onStart (Naming)

--- a/Samples/RectangularCollision.html
+++ b/Samples/RectangularCollision.html
@@ -83,8 +83,10 @@
 			//These fields are used to check box collition
 			x: 300,
 			y: 10,
-			width: 66,
-			height: 26,
+			//If you don't include these properties, collision plug in will add it 
+			//with 1 pixel width and 1 pixel height
+			//width: 66,
+			//height: 26,
 			//*****
 			
 			init: function () {
