Small fix for the last commit

--- a/Samples/clonedElementCollision.html
+++ b/Samples/clonedElementCollision.html
@@ -45,6 +45,8 @@
 		id: "player",
 		x: 10,
 		y: 10,
+		width: 10,
+		height: 10,
 		init: function () {
 			jsGFwk.IO.mouse.registerMove(function (coord) {
 				jsGFwk._gameObjects.player.x = coord.x;
