#7 Half way to complete this ticket

--- a/SampleGames/Galaga/index.html
+++ b/SampleGames/Galaga/index.html
@@ -2,6 +2,7 @@
 <head>
 </head>
 <script language="Javascript" src="../../Framework/jsGFwk.js"></script>
+<script language="Javascript" src="../../Framework/jsGFwkBasicAnimation.js"></script>
 <script language="Javascript" src="../../Framework/jsGFwkRM.js"></script>
 <script language="Javascript" src="../../Framework/jsGFwkIO.js"></script>
 <body style="background-color:#CCCCCC;">
@@ -11,6 +12,7 @@
 	jsGFwk.settings.canvas = "canvas";
 	jsGFwk.settings.clearColor = "rgb(0,0,0)";
 	
+	jsGFwk.include("BasicAnimation");
 	jsGFwk.include("ResourceManager");
 	jsGFwk.include("IO");
 	
