--- a/SampleGames/Hyper/index.html
+++ b/SampleGames/Hyper/index.html
@@ -3,6 +3,7 @@
 	<title>Hyper</title>
 </head>
 <script language="Javascript" src="../../Framework/jsGFwk.js"></script>
+<script language="Javascript" src="../../Framework/jsGFwkBasicAnimation.js"></script>
 <script language="Javascript" src="../../Framework/jsGFwkCollisions.js"></script>
 <script language="Javascript" src="../../Framework/jsGFwkRM.js"></script>
 <script language="Javascript" src="../../Framework/jsGFwkIO.js"></script>
@@ -26,6 +27,7 @@
 	jsGFwk.settings.clearColor = "rgb(255,255,255)";
 	
 	//Include external component libraries
+	jsGFwk.include("BasicAnimation");
 	jsGFwk.include("IO");
 	jsGFwk.include("Collisions");
 	jsGFwk.include("ResourceManager");
