--- a/SampleGames/Track&Field Archery By Pannoni/index.html
+++ b/SampleGames/Track&Field Archery By Pannoni/index.html
@@ -2,6 +2,7 @@
 <head>
 </head>
 <script language="Javascript" src="../../Framework/jsGFwk.js"></script>
+<script language="Javascript" src="../../Framework/jsGFwkBasicAnimation.js"></script>
 <script language="Javascript" src="../../Framework/jsGFwkIO.js"></script>
 <script language="Javascript" src="../../Framework/jsGFwkRM.js"></script>
 <script language="Javascript" src="Scripts/fondo.js"></script>
@@ -18,6 +19,7 @@
 	jsGFwk.settings.clearColor = "rgb(255,255,255)";
 			
 	//Include external component libraries
+	jsGFwk.include("BasicAnimation");
 	jsGFwk.include("IO");
 	jsGFwk.include("ResourceManager");
 	//************************************
