--- a/Samples/scenesHandling.html
+++ b/Samples/scenesHandling.html
@@ -2,6 +2,7 @@
 <head>
 </head>
 <script language="Javascript" src="../Framework/jsGFwk.js"></script>
+<script language="Javascript" src="../Framework/jsGFwkBasicAnimation.js"></script>
 <script language="Javascript" src="../Framework/jsGFwkScenes.js"></script>
 <body>
 	<canvas id="canvas" width="640" height="480"></canvas>
@@ -12,6 +13,7 @@
 	jsGFwk.settings.canvas = "canvas";
 	
 	//Include external component libraries
+	jsGFwk.include("BasicAnimation");
 	jsGFwk.include("Scenes");
 	//************************************
 	
