--- a/SampleGames/Game And Watch - Parachute/index.html
+++ b/SampleGames/Game And Watch - Parachute/index.html
@@ -2,6 +2,7 @@
 <head>
 </head>
 <script language="Javascript" src="../../Framework/jsGFwk.js"></script>
+<script language="Javascript" src="../../Framework/jsGFwkBasicAnimation.js"></script>
 <script language="Javascript" src="../../Framework/jsGFwkIO.js"></script>
 <script language="Javascript" src="../../Framework/jsGFwkRM.js"></script>
 <script language="Javascript" src="Scripts/hud.js"></script>
@@ -19,6 +20,7 @@
 	jsGFwk.settings.clearColor = "rgb(255,255,255)";
 			
 	//Include external component libraries
+	jsGFwk.include("BasicAnimation");
 	jsGFwk.include("IO");
 	jsGFwk.include("ResourceManager");
 	//************************************
