--- a/SampleGames/LineInvader/index.html
+++ b/SampleGames/LineInvader/index.html
@@ -2,6 +2,7 @@
 <head>
 	<title></title>
 	<script language="Javascript" src="../../Framework/jsGFwk.js"></script>
+	<script language="Javascript" src="../../Framework/jsGFwkBasicAnimation.js"></script>
 	<script language="Javascript" src="../../Framework/jsGFwkRM.js"></script>
 	<script language="Javascript" src="../../Framework/jsGFwkIO.js"></script>
 	<script language="Javascript" src="../../Framework/jsGFwkCollisions.js"></script>
@@ -36,6 +37,7 @@
 	jsGFwk.settings.canvas = "canvas";
 	jsGFwk.settings.clearColor = "rgb(0,0,0)";
 	
+	jsGFwk.include("BasicAnimation");
 	jsGFwk.include("ResourceManager");
 	jsGFwk.include("IO");
 	jsGFwk.include("Collisions");
