--- a/SampleGames/Plataformer/index.html
+++ b/SampleGames/Plataformer/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<script language="Javascript" src="../../Framework/jsGFwk.js"></script>
+	<script language="Javascript" src="../../Framework/jsGFwkBasicAnimation.js"></script>
 	<script language="Javascript" src="../../Framework/jsGFwkRM.js"></script>
 	<script language="Javascript" src="../../Framework/jsGFwkIO.js"></script>
 	<script language="Javascript" src="Scripts/map.js"></script>
@@ -17,6 +18,7 @@
 	
 	jsGFwk.settings.canvas = "myCanvas";
 	
+	jsGFwk.include("BasicAnimation");
 	jsGFwk.include("IO");
 	jsGFwk.include("ResourceManager");
 
