--- a/Samples/clonedElementCollision.html
+++ b/Samples/clonedElementCollision.html
@@ -2,6 +2,7 @@
 <head>
 </head>
 <script language="Javascript" src="../Framework/jsGFwk.js"></script>
+<script language="Javascript" src="../Framework/jsGFwkBasicAnimation.js"></script>
 <script language="Javascript" src="../Framework/jsGFwkContainer.js"></script>
 <script language="Javascript" src="../Framework/jsGFwkIO.js"></script>
 <script language="Javascript" src="../Framework/jsGFwkCollisions.js"></script>
@@ -14,6 +15,7 @@
 	jsGFwk.settings.canvas = "canvas";
 	
 	//Include external component libraries
+	jsGFwk.include("BasicAnimation");
 	jsGFwk.include("Container");
 	jsGFwk.include("IO");
 	jsGFwk.include("Collisions");
