--- a/Samples/containerElement.html
+++ b/Samples/containerElement.html
@@ -2,6 +2,7 @@
 <head>
 </head>
 <script language="Javascript" src="../Framework/jsGFwk.js"></script>
+<script language="Javascript" src="../Framework/jsGFwkBasicAnimation.js"></script>
 <script language="Javascript" src="../Framework/jsGFwkContainer.js"></script>
 <body>
 	<canvas id="canvas" width="640" height="480"></canvas>
@@ -13,6 +14,7 @@
 	jsGFwk.settings.canvas = "canvas";
 	
 	//Include external component libraries
+	jsGFwk.include("BasicAnimation");
 	jsGFwk.include("Container");
 	//************************************
 	
