--- a/Samples/debugger.html
+++ b/Samples/debugger.html
@@ -2,6 +2,7 @@
 <head>
 </head>
 <script language="Javascript" src="../Framework/jsGFwk.js"></script>
+<script language="Javascript" src="../Framework/jsGFwkBasicAnimation.js"></script>
 <script language="Javascript" src="../Framework/jsGFwkRM.js"></script>
 <script language="Javascript" src="../Framework/jsGFwkIO.js"></script>
 <script language="Javascript" src="../Framework/jsGFwkCollisions.js"></script>
@@ -15,6 +16,7 @@
 	jsGFwk.settings.clearColor = "rgb(255,255,255)";
 	
 	//Include external component libraries
+	jsGFwk.include("BasicAnimation");
 	jsGFwk.include("ResourceManager");
 	jsGFwk.include("IO");
 	jsGFwk.include("Collisions");
