--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>jsGFwk by matiasiacono</title>
+    <title>jsGFwk by Matias Iacono</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
         <h1>jsGFwk</h1>
-        <h2>JavaScript and HTML5 videogame framework</h2>
+        <h2>Minimalistic videogame framework</h2>
         <a href="https://github.com/matiasiacono/jsGFwk" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
