--- a/index.html
+++ b/index.html
@@ -34,9 +34,15 @@
       <div class="inner clearfix">
         <section id="main-content">
 			<h1>
-				<a name="jsgfwk" class="anchor" href="#jsgfwk"><span class="octicon octicon-link"></span></a>jsGFwk
+				<a name="jsgfwk" class="anchor" href="#jsgfwk"><span class="octicon octicon-link"></span></a>Welcome to jsGFwk
 			</h1>
-			<canvas id="canvas" width="320" height="240"></canvas>
+			<div>
+				<h3>First game made with jsGFwk</h3>
+				<p>This is the first game test made with jsGFwk.</p>
+				<p>Is unfinished but demonstrate the powerful of this simple video game framework.</p>
+				<p>Use the left and right arrow to move the ship. Space bar to shoot, and D to die.</p>
+				<canvas id="canvas" width="320" height="240"></canvas>
+			</div>
         </section>
 
         <aside id="sidebar">
