--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 			</h1>
 			<div>
 				<h3>First game made with jsGFwk</h3>
-				<p>This is the first game test made with jsGFwk.</p>
-				<p>Is unfinished but demonstrate the powerful of this simple video game framework.</p>
-				<p>Use the left and right arrow to move the ship. Space bar to shoot, and D to die.</p>
+				<p>This is the first game test made with jsGFwk.<br>
+				Is unfinished but demonstrate the powerful of this simple video game framework.<br>
+				Use the left and right arrow to move the ship. Space bar to shoot, and D to die.</p>
 				<canvas id="canvas" width="320" height="240"></canvas>
 			</div>
         </section>
