--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="inner clearfix">
         <section id="main-content">
 			<h1>
-				<a name="jsgfwk" class="anchor" href="#jsgfwk"><span class="octicon octicon-link"></span></a>Welcome to jsGFwk
+				<a name="jsgfwk" class="anchor" href="#jsgfwk"><span class="octicon octicon-link"></span></a>Play a little
 			</h1>
 			<div>
 				<h3>First game made with jsGFwk</h3>
