--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
 				Use the left and right arrow to move the ship. Space bar to shoot, and D to die.</p>
 				<canvas id="canvas" width="320" height="240"></canvas>
 			</div>
+			<h1>Learn to use it with videos (Spanish only)</h1>
+			<div>
+				<iframe width="560" height="315" src="//www.youtube.com/embed/6BPy_haAHmE?list=PLL6dtBDFEE6egmnLlCLsxx0hjGvpy1cuZ" frameborder="0" allowfullscreen></iframe>
+			</div>
         </section>
 
         <aside id="sidebar">
