--- a/index.html
+++ b/index.html
@@ -40,8 +40,12 @@
 				<h3>First game made with jsGFwk</h3>
 				<p>This is the first game test made with jsGFwk.<br>
 				Is unfinished but demonstrate the powerful of this simple video game framework.<br>
-				Use the <b>left</b> and <b>right</b> arrow to move the ship. <b>Space bar</b> to shoot, and <b>D</b> to die.</p>
+				Use the left and right arrow to move the ship. Space bar to shoot, and D to die.</p>
 				<canvas id="canvas" width="320" height="240"></canvas>
+			</div>
+			<h3>First steps</h3>
+			<div>
+				<h4>Set up your page</h4>
 			</div>
 			<h3>Learn to use it with videos (Spanish only)</h3>
 			<div>
