--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
 			<h3>First steps</h3>
 			<div>
 				<h4>Set up your page</h4>
+				<p>Add a canvas elemento to the DOM</p>
+				<code>
+					<canvas id="canvas" width="640" height="480">
+				</code>
 			</div>
 			<h3>Learn to use it with videos (Spanish only)</h3>
 			<div>
