--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<h4>Set up your page</h4>
 				<p>Add a canvas elemento to the DOM</p>
 				<code>
-					%3Ccanvas id="canvas" width="640" height="480"%3E
+					&#60;canvas id="canvas" width="640" height="480"&#62;
 				</code>
 			</div>
 			<h3>Learn to use it with videos (Spanish only)</h3>
