--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<h3>First steps</h3>
 			<div>
 				<h4>Set up your page</h4>
-				<p>Add a canvas elemento to the DOM</p>
+				<p>Add a canvas element to the DOM</p>
 				<code>
 					&#60;canvas id="canvas" width="640" height="480"&#62;
 				</code>
