--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 				Is unfinished but demonstrate the powerful of this simple video game framework.<br>
 				Use the left and right arrow to move the ship. Space bar to shoot, and D to die.</p>
 				<canvas id="canvas" width="320" height="240"></canvas>
+				<p>If you don't see it, refresh the page a couple of times. Sometimes GitHub doesn't provide the files correctly.</p>
 			</div>
 			<br>
 			<br>
