--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<h3>First game made with jsGFwk</h3>
 				<p>This is the first game test made with jsGFwk.<br>
 				Is unfinished but demonstrate the powerful of this simple video game framework.<br>
-				Use the left and right arrow to move the ship. Space bar to shoot, and D to die.</p>
+				Use the LEFT and RIGHT arrow to move the ship. X to shoot, and D to die.</p>
 				<canvas id="canvas" width="320" height="240"></canvas>
 				<p>If you don't see it, refresh the page a couple of times. Sometimes GitHub doesn't provide the files correctly.</p>
 			</div>
