Added initial Blur filtering

--- a/Samples/spriteFilter.html
+++ b/Samples/spriteFilter.html
@@ -82,7 +82,21 @@
 					 {left: 480, top: 34, width: 66, height: 26}, //second crop
 					 {left: 558, top: 34, width: 66, height: 26}, //last crop
 					],
-					jsGFwk.Sprites.filters.INVERTCOLOR);;
+					jsGFwk.Sprites.filters.INVERTCOLOR);
+					
+				jsGFwk.Sprites.createSpriteCollection("fallingGuyDarker", jsGFwk.ResourceManager.graphics.character.image, 
+					[{left: 409, top: 34, width: 66, height: 26}, //first crop
+					 {left: 480, top: 34, width: 66, height: 26}, //second crop
+					 {left: 558, top: 34, width: 66, height: 26}, //last crop
+					],
+					jsGFwk.Sprites.filters.DARKER);
+					
+				jsGFwk.Sprites.createSpriteCollection("fallingGuyBlur", jsGFwk.ResourceManager.graphics.character.image, 
+					[{left: 409, top: 34, width: 66, height: 26}, //first crop
+					 {left: 480, top: 34, width: 66, height: 26}, //second crop
+					 {left: 558, top: 34, width: 66, height: 26}, //last crop
+					],
+					jsGFwk.Sprites.filters.BLUR);
 			
 				jsGFwk.IO.mouse.registerMove(function (coord) {
 					jsGFwk._gameObjects.fallingCharacter.x = coord.x;
@@ -92,18 +106,24 @@
 				jsGFwk.Sprites.fallingGuy.loop(true);
 				jsGFwk.Sprites.fallingGuyNormal.loop(true);
 				jsGFwk.Sprites.fallingGuyInverted.loop(true);
+				jsGFwk.Sprites.fallingGuyDarker.loop(true);
+				jsGFwk.Sprites.fallingGuyBlur.loop(true);
 			},
 			visible: true,
 			update: function(delta) {
 				jsGFwk.Sprites.fallingGuy.next();
 				jsGFwk.Sprites.fallingGuyNormal.next();
 				jsGFwk.Sprites.fallingGuyInverted.next();
+				jsGFwk.Sprites.fallingGuyDarker.next();
+				jsGFwk.Sprites.fallingGuyBlur.next();
 			},
 			draw: function (context) {
 				//You can create sprites for easy graphic handling
 				context.drawImage(jsGFwk.Sprites.fallingGuy.sprite.image, this.x, this.y);
 				context.drawImage(jsGFwk.Sprites.fallingGuyNormal.sprite.image, this.x + 90, this.y);
 				context.drawImage(jsGFwk.Sprites.fallingGuyInverted.sprite.image, this.x + 180, this.y);
+				context.drawImage(jsGFwk.Sprites.fallingGuyDarker.sprite.image, this.x + 270, this.y);
+				context.drawImage(jsGFwk.Sprites.fallingGuyBlur.sprite.image, this.x + 360, this.y);
 			}
 		});
 	}
