--- a/SampleGames/BoxJumper/index.html
+++ b/SampleGames/BoxJumper/index.html
@@ -25,6 +25,7 @@
 	
 		jsGFwk.settings.canvas = "canvas";
 		jsGFwk.settings.clearColor = "rgb(0, 0, 0)";
+		jsGFwk.settings.frameRate = 1000 / 60;
 		
 		jsGFwk.include("FastAnimation");
 		jsGFwk.include("Container");
