--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
         </section>
 
         <aside id="sidebar">
+		  <a href="http://matiasiacono.github.io/jsGFwk/docs/index.html" class="button">
+            <small>Documentation</small>
+          </a>
           <a href="https://github.com/matiasiacono/jsGFwk/zipball/master" class="button">
             <small>Download</small>
             .zip file
