Changed the example

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <![endif]-->
 
 	<script src="https://rawgithub.com/MatiasIac/jsGFwk/master/Framework/jsGFwk.js"></script>
-	<script src="https://rawgithub.com/MatiasIac/jsGFwk/master/Framework/jsGFwkBasicAnimation.js"></script>
+	<script src="https://rawgithub.com/MatiasIac/jsGFwk/master/Framework/jsGFwk2dFastAnimation.js"></script>
 	<script src="https://rawgithub.com/MatiasIac/jsGFwk/master/Framework/jsGFwkRM.js"></script>
 	<script src="https://rawgithub.com/MatiasIac/jsGFwk/master/Framework/jsGFwkIO.js"></script>
 	
@@ -99,9 +99,6 @@
         </section>
 
         <aside id="sidebar">
-		  <a href="http://matiasiacono.github.io/jsGFwk/docs/index.html" class="button">
-            <small>Documentation</small>
-          </a>
           <a href="https://github.com/matiasiacono/jsGFwk/zipball/master" class="button">
             <small>Download</small>
             .zip file
@@ -122,7 +119,7 @@
 		jsGFwk.settings.canvas = "canvas";
 		jsGFwk.settings.clearColor = "rgb(0,0,0)";
 		
-		jsGFwk.include("BasicAnimation");
+		jsGFwk.include("FastAnimation");
 		jsGFwk.include("ResourceManager");
 		jsGFwk.include("IO");
 		
